fix default image of article, check justify align all page

--- a/dev/scss/2_component/_08_list.scss
+++ b/dev/scss/2_component/_08_list.scss
@@ -929,6 +929,12 @@ list
 			background-color: $colorRed;
 		}
 	}
+	&__img {
+		padding-left: 30px;
+		@include sp() {
+			padding-left: 0;
+		}
+	}
 }
 .c-list13 {
 	display: flex;
